--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,9 @@ spring:
     username: {POSTGRES_USER}
     password: {POSTGRES_PASSWORD}
     url: jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
+jpa:
+  database-platform: org.hibernate.dialect.PostgresPlusDialect
+  generate-ddl: true
+  show-sql: true
+  hibernate:
+    ddl-auto: validate
