--- a/src/main/resources/deployment.yml
+++ b/src/main/resources/deployment.yml
@@ -35,6 +35,8 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 8080
+        imagePullSecrets :
+          - name : $KUBERNETES_SECRET_NAME
           env:   # env variables
             - name: DB_HOST   # configMap
               valueFrom:
