--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/dops
+spring.datasource.url=jdbc:postgresql://:5432/dops
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.default_schema=dops
 
-server.port=8081
+server.port=8080
