--- a/src/main/resources/deployment.yml
+++ b/src/main/resources/deployment.yml
@@ -32,7 +32,7 @@ spec:
       containers:
         - name: dops
           image: local/dops:latest
-          imagePullPolicy: "Always"
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
           env:   # env variables
