--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     username: {POSTGRES_USER}
     password: {POSTGRES_PASSWORD}
-    url: jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
+    url: jdbc:postgresql://postgresql-published:5432/dops
 jpa:
   database-platform: org.hibernate.dialect.PostgresPlusDialect
   generate-ddl: true
