--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    username: {POSTGRES_USER}
-    password: {POSTGRES_PASSWORD}
+    username: postgres
+    password: postgres
     url: jdbc:postgresql://172.17.0.8:5432/dops
 jpa:
   database-platform: org.hibernate.dialect.PostgresPlusDialect
