--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: postgres
-    url: jdbc:postgresql://172.17.0.8:5432/dops
+    url: jdbc:postgresql://postgres:5432/dops
 jpa:
   database-platform: org.hibernate.dialect.PostgresPlusDialect
   generate-ddl: true
