--- a/src/main/resources/postgres-deployment.yml
+++ b/src/main/resources/postgres-deployment.yml
@@ -18,16 +18,16 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pv-claim # name of PVC essential for identifying the storage data
+  name: postgres-pv-claim
   labels:
     app: postgres
     tier: database
 spec:
   accessModes:
-    - ReadWriteOnce   #This specifies the mode of the claim that we are trying to create.
+    - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi    #This will tell kubernetes about the amount of space we are trying to claim.
+      storage: 1Gi
 
 ---
 apiVersion: apps/v1
