--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
-#spring.datasource.url=jdbc:postgresql://:5432/dops
+#spring.datasource.url=jdbc:postgresql://localhost:5432/
 #
 #spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
 #spring.jpa.generate-ddl=false
